--- a/requirements.txt
+++ b/requirements.txt
@@ -4,22 +4,56 @@
 _libgcc_mutex=0.1=conda_forge
 _openmp_mutex=4.5=1_gnu
 abseil-cpp=20210324.2=h9c3ff4c_0
+anyio=3.4.0=py39hf3d152e_0
+argon2-cffi=21.1.0=py39h3811e60_2
 arrow-cpp=3.0.0=py39h6b21186_4
+async_generator=1.10=py_0
+attrs=21.2.0=pyhd8ed1ab_0
 aws-c-common=0.4.57=he6710b0_1
 aws-c-event-stream=0.1.6=h2531618_5
 aws-checksums=0.1.9=he6710b0_0
 aws-sdk-cpp=1.8.185=hce553d0_0
+babel=2.9.1=pyh44b312d_0
+backcall=0.2.0=pyh9f0ad1d_0
+backports=1.0=py_2
+backports.functools_lru_cache=1.6.4=pyhd8ed1ab_0
+bleach=4.1.0=pyhd8ed1ab_0
 boost-cpp=1.69.0=h11c811c_1000
 brotli=1.0.9=h7f98852_6
 brotli-bin=1.0.9=h7f98852_6
+brotlipy=0.7.0=py39h3811e60_1003
 bzip2=1.0.8=h7f98852_4
 c-ares=1.18.1=h7f98852_0
 ca-certificates=2021.10.8=ha878542_0
+certifi=2021.10.8=py39hf3d152e_1
+cffi=1.15.0=py39h4bc2ebd_0
+charset-normalizer=2.0.8=pyhd8ed1ab_0
+cryptography=36.0.0=py39h95dcef6_0
+debugpy=1.5.1=py39he80948d_0
+decorator=5.1.0=pyhd8ed1ab_0
+defusedxml=0.7.1=pyhd8ed1ab_0
 double-conversion=3.1.5=h9c3ff4c_2
+entrypoints=0.3=pyhd8ed1ab_1003
 gflags=2.2.2=he1b5a44_1004
 glog=0.5.0=h48cff8f_0
 grpc-cpp=1.39.0=hae934f6_5
 icu=58.2=hf484d3e_1000
+idna=3.1=pyhd3deb0d_0
+importlib-metadata=4.8.2=py39hf3d152e_0
+importlib_resources=5.4.0=pyhd8ed1ab_0
+ipykernel=6.5.1=py39hef51801_0
+ipython=7.30.1=py39hf3d152e_0
+ipython_genutils=0.2.0=py_1
+jedi=0.18.1=py39hf3d152e_0
+jinja2=3.0.3=pyhd8ed1ab_0
+json5=0.9.5=pyh9f0ad1d_0
+jsonschema=4.2.1=pyhd8ed1ab_0
+jupyter_client=7.1.0=pyhd8ed1ab_0
+jupyter_core=4.9.1=py39hf3d152e_1
+jupyter_server=1.12.1=pyhd8ed1ab_0
+jupyterlab=3.2.4=pyhd8ed1ab_0
+jupyterlab_pygments=0.1.2=pyh9f0ad1d_0
+jupyterlab_server=2.8.2=pyhd8ed1ab_0
 krb5=1.19.2=hcc1bbae_3
 ld_impl_linux-64=2.36.1=hea4e1c9_2
 libblas=3.9.0=12_linux64_openblas
@@ -41,35 +75,74 @@ liblapack=3.9.0=12_linux64_openblas
 libnghttp2=1.43.0=h812cca2_1
 libopenblas=0.3.18=pthreads_h8fe5266_0
 libprotobuf=3.17.2=h4ff587b_1
+libsodium=1.0.18=h36c2ea0_1
 libssh2=1.10.0=ha56f1ee_2
 libstdcxx-ng=11.2.0=he4da1e4_11
 libthrift=0.14.2=he6d91bd_1
 libzlib=1.2.11=h36c2ea0_1013
 lz4-c=1.9.3=h9c3ff4c_1
+markupsafe=2.0.1=py39h3811e60_1
+matplotlib-inline=0.1.3=pyhd8ed1ab_0
+mistune=0.8.4=py39h3811e60_1005
+nbclassic=0.3.4=pyhd8ed1ab_0
+nbclient=0.5.9=pyhd8ed1ab_0
+nbconvert=6.3.0=py39hf3d152e_1
+nbformat=5.1.3=pyhd8ed1ab_0
 ncurses=6.2=h58526e2_4
+nest-asyncio=1.5.4=pyhd8ed1ab_0
+notebook=6.4.6=pyha770c72_0
 numpy=1.21.4=py39hdbf815f_0
 openssl=1.1.1l=h7f98852_0
 orc=1.6.9=ha97a36c_3
+packaging=21.3=pyhd8ed1ab_0
 pandas=1.3.4=py39hde0f152_1
+pandoc=2.16.2=h7f98852_0
+pandocfilters=1.5.0=pyhd8ed1ab_0
+parso=0.8.3=pyhd8ed1ab_0
+pexpect=4.8.0=pyh9f0ad1d_2
+pickleshare=0.7.5=py_1003
 pip=21.3.1=pyhd8ed1ab_0
+prometheus_client=0.12.0=pyhd8ed1ab_0
+prompt-toolkit=3.0.22=pyha770c72_0
+ptyprocess=0.7.0=pyhd3deb0d_0
 py4j=0.10.9.2=pyhd8ed1ab_0
 pyarrow=3.0.0=py39he0739d4_3
+pycparser=2.21=pyhd8ed1ab_0
+pygments=2.10.0=pyhd8ed1ab_0
+pyopenssl=21.0.0=pyhd8ed1ab_0
+pyparsing=3.0.6=pyhd8ed1ab_0
+pyrsistent=0.18.0=py39h3811e60_0
+pysocks=1.7.1=py39hf3d152e_4
 pyspark=3.2.0=pyh6c4a22f_0
 python=3.9.7=hb7a2778_3_cpython
 python-dateutil=2.8.2=pyhd8ed1ab_0
 python_abi=3.9=2_cp39
 pytz=2021.3=pyhd8ed1ab_0
+pyzmq=22.3.0=py39h37b5a0c_1
 re2=2021.11.01=h9c3ff4c_0
 readline=8.1=h46c0cb4_0
+requests=2.26.0=pyhd8ed1ab_1
+send2trash=1.8.0=pyhd8ed1ab_0
 setuptools=59.4.0=py39hf3d152e_0
 six=1.16.0=pyh6c4a22f_0
 snappy=1.1.8=he1b5a44_3
+sniffio=1.2.0=py39hf3d152e_2
 sqlite=3.37.0=h9cd32fc_0
+terminado=0.12.1=py39hf3d152e_1
+testpath=0.5.0=pyhd8ed1ab_0
 tk=8.6.11=h27826a3_1
+tornado=6.1=py39h3811e60_2
+traitlets=5.1.1=pyhd8ed1ab_0
 tzdata=2021e=he74cb21_0
 uriparser=0.9.5=h9c3ff4c_0
+urllib3=1.26.7=pyhd8ed1ab_0
 utf8proc=2.6.1=h27cfd23_0
+wcwidth=0.2.5=pyh9f0ad1d_2
+webencodings=0.5.1=py_1
+websocket-client=1.2.1=py39hf3d152e_0
 wheel=0.37.0=pyhd8ed1ab_1
 xz=5.2.5=h516909a_1
+zeromq=4.3.4=h9c3ff4c_1
+zipp=3.6.0=pyhd8ed1ab_0
 zlib=1.2.11=h36c2ea0_1013
 zstd=1.4.9=ha95c52a_0
